--- a/POSLDA Storytelling Twitter Dump.ipynb
+++ b/POSLDA Storytelling Twitter Dump.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
     "doc_j = \"Ibuku menyarankan saya untuk memakan brokoli agar tekanan darah terkontrol.\"\n",
     "\n",
     "# compile sample documents into a list\n",
-    "doc_set = [doc_a, doc_b, doc_c, doc_d, doc_e, doc_f, doc_g, doc_h, doc_i, doc_j]"
+    "documents = [doc_a, doc_b, doc_c, doc_d, doc_e, doc_f, doc_g, doc_h, doc_i, doc_j]"
    ]
   },
   {
@@ -33,15 +33,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'prob'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-8c6b5ae90d7a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mhmmtagger\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtagger\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mMainTagger\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtokenization\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mmt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mE:\\Python\\POSLDA-Storytelling-Twitter\\hmmtagger\\__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mprob\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtraining\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtagger\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mngram\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'prob'"
+     ]
+    }
+   ],
    "source": [
-    "# PYTHON 2.7\n",
     "import os\n",
-    "from hmmtagger import MainTagger\n",
+    "from hmmtagger.tagger import MainTagger\n",
     "from tokenization import *\n",
     "\n",
     "mt = None"
@@ -49,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -69,294 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>POS</th>\n",
-       "      <th>POS Name</th>\n",
-       "      <th>Example</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>OP</td>\n",
-       "      <td>Open Parenthesis</td>\n",
-       "      <td>({[</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CP</td>\n",
-       "      <td>Close Parenthesis</td>\n",
-       "      <td>)}]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>GM</td>\n",
-       "      <td>Slash</td>\n",
-       "      <td>/</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>;</td>\n",
-       "      <td>Semicolon</td>\n",
-       "      <td>;</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>:</td>\n",
-       "      <td>Colon</td>\n",
-       "      <td>:</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>\"</td>\n",
-       "      <td>Quotation</td>\n",
-       "      <td>\"</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>.</td>\n",
-       "      <td>Sentence Terminator</td>\n",
-       "      <td>.!?</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>,</td>\n",
-       "      <td>Comma</td>\n",
-       "      <td>,</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>-</td>\n",
-       "      <td>Dash</td>\n",
-       "      <td>-</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>...</td>\n",
-       "      <td>Ellipsis</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>JJ</td>\n",
-       "      <td>Adjective</td>\n",
-       "      <td>Kaya, Manis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>RB</td>\n",
-       "      <td>Adverb</td>\n",
-       "      <td>Sementara, Nanti</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>NN</td>\n",
-       "      <td>Common Noun</td>\n",
-       "      <td>Mobil</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>NNP</td>\n",
-       "      <td>Proper Noun</td>\n",
-       "      <td>Bekasi, Indonesia</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>NNG</td>\n",
-       "      <td>Genitive Noun</td>\n",
-       "      <td>Bukunya</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>VBI</td>\n",
-       "      <td>Intransitive Verb</td>\n",
-       "      <td>Pergi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>VBT</td>\n",
-       "      <td>Transitive Verb</td>\n",
-       "      <td>Membeli</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>IN</td>\n",
-       "      <td>Preposition</td>\n",
-       "      <td>Di, Ke, Dari</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>MD</td>\n",
-       "      <td>Modal</td>\n",
-       "      <td>Bisa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>CC</td>\n",
-       "      <td>Coor-Conjuction</td>\n",
-       "      <td>Dan, Atau, Tetapi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>SC</td>\n",
-       "      <td>Subor-Conjunction</td>\n",
-       "      <td>Jika, Ketika</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>DT</td>\n",
-       "      <td>Determiner</td>\n",
-       "      <td>Para, Ini, Itu</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>UH</td>\n",
-       "      <td>Interjection</td>\n",
-       "      <td>Wah, Aduh, Oi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>CDO</td>\n",
-       "      <td>Ordinal Numerals</td>\n",
-       "      <td>Pertama, Kedua</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>CDC</td>\n",
-       "      <td>Collective Numerals</td>\n",
-       "      <td>Bertiga</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>CDP</td>\n",
-       "      <td>Primary Numerals</td>\n",
-       "      <td>Satu, Dua</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>CDI</td>\n",
-       "      <td>Irregular Numerals</td>\n",
-       "      <td>Beberapa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>PRP</td>\n",
-       "      <td>Personal Pronouns</td>\n",
-       "      <td>Saya, Kamu</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>WP</td>\n",
-       "      <td>WH-Pronouns</td>\n",
-       "      <td>Apa, Siapa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>PRN</td>\n",
-       "      <td>Number Pronouns</td>\n",
-       "      <td>Kedua-duanya</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>PRL</td>\n",
-       "      <td>Locative Pronouns</td>\n",
-       "      <td>Sini, Situ, Sana</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>NEG</td>\n",
-       "      <td>Negation</td>\n",
-       "      <td>Bukan, Tidak</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>SYM</td>\n",
-       "      <td>Symbol</td>\n",
-       "      <td>@#$%^&amp;</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>RP</td>\n",
-       "      <td>Particles</td>\n",
-       "      <td>Pun, Kah</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>FW</td>\n",
-       "      <td>Foreign Word</td>\n",
-       "      <td>Foreign, Word</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    POS             POS Name            Example\n",
-       "1    OP     Open Parenthesis                ({[\n",
-       "2    CP    Close Parenthesis                )}]\n",
-       "3    GM                Slash                  /\n",
-       "4     ;            Semicolon                  ;\n",
-       "5     :                Colon                  :\n",
-       "6     \"            Quotation                  \"\n",
-       "7     .  Sentence Terminator                .!?\n",
-       "8     ,                Comma                  ,\n",
-       "9     -                 Dash                  -\n",
-       "10  ...             Ellipsis                ...\n",
-       "11   JJ            Adjective        Kaya, Manis\n",
-       "12   RB               Adverb   Sementara, Nanti\n",
-       "13   NN          Common Noun              Mobil\n",
-       "14  NNP          Proper Noun  Bekasi, Indonesia\n",
-       "15  NNG        Genitive Noun            Bukunya\n",
-       "16  VBI    Intransitive Verb              Pergi\n",
-       "17  VBT      Transitive Verb            Membeli\n",
-       "18   IN          Preposition       Di, Ke, Dari\n",
-       "19   MD                Modal               Bisa\n",
-       "20   CC      Coor-Conjuction  Dan, Atau, Tetapi\n",
-       "21   SC    Subor-Conjunction       Jika, Ketika\n",
-       "22   DT           Determiner     Para, Ini, Itu\n",
-       "23   UH         Interjection      Wah, Aduh, Oi\n",
-       "24  CDO     Ordinal Numerals     Pertama, Kedua\n",
-       "25  CDC  Collective Numerals            Bertiga\n",
-       "26  CDP     Primary Numerals          Satu, Dua\n",
-       "27  CDI   Irregular Numerals           Beberapa\n",
-       "28  PRP    Personal Pronouns         Saya, Kamu\n",
-       "29   WP          WH-Pronouns         Apa, Siapa\n",
-       "30  PRN      Number Pronouns       Kedua-duanya\n",
-       "31  PRL    Locative Pronouns   Sini, Situ, Sana\n",
-       "32  NEG             Negation       Bukan, Tidak\n",
-       "33  SYM               Symbol             @#$%^&\n",
-       "34   RP            Particles           Pun, Kah\n",
-       "35   FW         Foreign Word      Foreign, Word"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# daftar tagging\n",
     "df = pd.DataFrame({'POS' : ['OP', 'CP', 'GM', ';', ':', \n",
@@ -436,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -451,10 +176,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -475,8 +198,11 @@
     "\n",
     "def init_tag():\n",
     "    global mt\n",
-    "    if mt is None:\n",
-    "        mt = MainTagger(\"resource/Lexicon.trn\", \"resource/Ngram.trn\", 0, 3, 3, 0, 0, False, 0.2, 0, 500.0, 1)"
+    "    try:\n",
+    "        if mt is None:\n",
+    "            mt = MainTagger(\"resource/Lexicon.trn\", \"resource/Ngram.trn\", 0, 3, 3, 0, 0, False, 0.2, 0, 500.0, 1)\n",
+    "    except:\n",
+    "        print(\"Error Exception\")"
    ]
   },
   {
@@ -494,21 +220,98 @@
    },
    "outputs": [],
    "source": [
-    "def do_tag(documents):\n",
-    "#     lines = text.strip().split(\"\\n\")\n",
-    "    for doc in documents:\n",
-    "        result = []\n",
-    "        try:\n",
-    "            init_tag()\n",
-    "            for l in lines:\n",
-    "                if len(l) == 0: continue\n",
-    "                out = sentence_extraction(cleaning(l))\n",
-    "                for o in out:\n",
-    "                    strtag = \" \".join(tokenisasi_kalimat(o)).strip()\n",
-    "                    result += [\" \".join(mt.taggingStr(strtag))]\n",
-    "        except:\n",
-    "            return \"Error Exception\"\n",
-    "    return \"\\n\".join(result)"
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tokenisasi dan tagging\n",
+    "tagged_doc = []\n",
+    "for doc in documents:\n",
+    "    lines = doc.strip().split(\"\\n\")\n",
+    "    try:\n",
+    "        init_tag()\n",
+    "        for l in lines:\n",
+    "            if len(l) == 0: continue\n",
+    "            out = sentence_extraction(cleaning(l))\n",
+    "            for o in out:\n",
+    "                strtag = \" \".join(tokenisasi_kalimat(o)).strip()\n",
+    "#                 result += [\" \".join(mt.taggingStr(strtag))]\n",
+    "                tagged_doc += [mt.taggingStr(strtag)]\n",
+    "    except:\n",
+    "        print (\"Error Exception\")\n",
+    "\n",
+    "for _ in tagged_doc:\n",
+    "    print (_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleaning tagging buat cari topik"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc_con = []\n",
+    "for tagged in tagged_doc:\n",
+    "    con = []\n",
+    "    for _ in tagged:\n",
+    "        if _.split(\"/\", 1)[1] in Ccon:\n",
+    "            con += [\"\".join(_)]\n",
+    "    doc_con += [con]\n",
+    "\n",
+    "for _ in doc_con:\n",
+    "    print (_) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "documents = []\n",
+    "for con in doc_con:\n",
+    "    co = []\n",
+    "    for c in con:\n",
+    "        result = c.split('/', 1)[0]\n",
+    "        co.append(result)\n",
+    "    documents += [co]\n",
+    "    \n",
+    "for _ in documents:\n",
+    "    print (_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = 'name/NN'\n",
+    "sep = '/'\n",
+    "rest = text.split(sep, 1)[0]\n",
+    "print (rest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_string=\"mengatakan/VBI\"\n",
+    "print (my_string.split(\"/\",1)[1]) "
    ]
   },
   {
@@ -745,9 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for k, word_counts in enumerate(topic_word_counts):\n",
@@ -763,19 +564,17 @@
    },
    "outputs": [],
    "source": [
-    "topic_names = [\"kata sambung\",\n",
-    "               \"kesehatan\",\n",
-    "               \"juara dan prestasi\",\n",
-    "               \"bisbol\",\n",
-    "               \"makan brokoli\"]"
+    "topic_names = [\"Topik 1\",\n",
+    "               \"Topik 2\",\n",
+    "               \"Topik 3\",\n",
+    "               \"Topik 4\",\n",
+    "               \"Topik 5\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for document, topic_counts in zip(documents, document_topic_counts):\n",
@@ -797,21 +596,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
