tidy up LdaModel

--- a/POSLDA Storytelling Twitter Dump.ipynb
+++ b/POSLDA Storytelling Twitter Dump.ipynb
@@ -352,241 +352,6 @@
    },
    "outputs": [],
    "source": [
-    "def sample_from(weights):\n",
-    "    \"\"\"returns i with probability weights[i] / sum(weights)\"\"\"\n",
-    "    total = sum(weights)\n",
-    "    rnd = total * random.random()     # uniform between 0 and total\n",
-    "    for i, w in enumerate(weights):\n",
-    "        rnd -= w                      # return the smallest i such that\n",
-    "        if rnd <= 0: return i         # weights[0] + ... + weights[i] >= rnd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from collections import Counter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "K = 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# a list of Counters, one for each document\n",
-    "document_topic_counts = [Counter() for _ in documents]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# a list of Counters, one for each topic\n",
-    "topic_word_counts = [Counter() for _ in range(K)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# a list of numbers, one for each topic\n",
-    "topic_counts = [0 for _ in range(K)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# a list of numbers, one for each documents\n",
-    "document_lengths = [len(d) for d in documents]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# the number of distinct words\n",
-    "distinct_words = set(word for document in documents for word in document)\n",
-    "W = len(distinct_words)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# the number of documents\n",
-    "D = len(documents)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def p_topic_given_document(topic, d, alpha=0.1):\n",
-    "    \"\"\"the fraction of words in document _d_\n",
-    "    that are assigned to _topic_ (plus some smoothing)\"\"\"\n",
-    "    \n",
-    "    return ((document_topic_counts[d][topic] + alpha) /\n",
-    "            (document_lengths[d] + K * alpha))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def p_word_given_topic(word, topic, beta=0.1):\n",
-    "    \"\"\"the fration of words assigned to _topic_\n",
-    "    that equal _word_ (plus some smoothing)\"\"\"\n",
-    "    \n",
-    "    return ((topic_word_counts[topic][word] + beta) /\n",
-    "            (topic_counts[topic] + W * beta))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def topic_weight(d, word, k):\n",
-    "    \"\"\"given a document and a word in that document,\n",
-    "    return the weight for the k-th topic\"\"\"\n",
-    "    \n",
-    "    return p_word_given_topic(word, k) * p_topic_given_document(k, d)\n",
-    "\n",
-    "def choose_new_topic(d, word):\n",
-    "    return sample_from([topic_weight(d, word, k)\n",
-    "                        for k in range(K)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import random"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "random.seed(0)\n",
-    "document_topics = [[random.randrange(K) for word in document]\n",
-    "                   for document in documents]\n",
-    "\n",
-    "for d in range(D):\n",
-    "    for word, topic, in zip(documents[d], document_topics[d]):\n",
-    "        document_topic_counts[d][topic] += 1\n",
-    "        topic_word_counts[topic][word] += 1\n",
-    "        topic_counts[topic] += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for iter in range(1000):\n",
-    "    for d in range(D):\n",
-    "        for i, (word, topic) in enumerate(zip(documents[d],\n",
-    "                                              document_topics[d])):\n",
-    "            \n",
-    "            # remove this word / topic from counts\n",
-    "            # so that it doesn't influence the weights\n",
-    "            document_topic_counts[d][topic] -= 1\n",
-    "            topic_word_counts[topic][word] -= 1\n",
-    "            topic_counts[topic] -= 1\n",
-    "            document_lengths[d] -= 1\n",
-    "            \n",
-    "            # choose a new topic based on the weights\n",
-    "            new_topic = choose_new_topic(d, word)\n",
-    "            document_topics[d][i] = new_topic\n",
-    "            \n",
-    "            # and now add it back to the counts\n",
-    "            document_topic_counts[d][new_topic] += 1\n",
-    "            topic_word_counts[new_topic][word] += 1\n",
-    "            topic_counts[new_topic] += 1\n",
-    "            document_lengths[d] += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for k, word_counts in enumerate(topic_word_counts):\n",
-    "    for word, count in word_counts.most_common():\n",
-    "        if count > 0: print (k, word, count)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "topic_names = [\"Topik 1: \",\n",
     "               \"Topik 2: \",\n",
     "               \"Topik 3: \",\n",
@@ -683,35 +448,123 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'W' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-c41275d93467>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlda\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mLdaModel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdocuments2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mE:\\Python\\POSLDA-Storytelling-Twitter\\lda\\ldamodel.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, documents, K, alpha, beta)\u001b[0m\n\u001b[0;32m     59\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m                         \u001b[1;31m# choose a new topic based on the weights\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 61\u001b[1;33m                         \u001b[0mnew_topic\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchoose_new_topic\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mword\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mK\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     62\u001b[0m                         \u001b[0mdocument_topics\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnew_topic\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     63\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mE:\\Python\\POSLDA-Storytelling-Twitter\\lda\\ldamodel.py\u001b[0m in \u001b[0;36mchoose_new_topic\u001b[1;34m(self, d, word, K)\u001b[0m\n\u001b[0;32m    106\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    107\u001b[0m         return self.sample_from([self.topic_weight(d, word, k)\n\u001b[1;32m--> 108\u001b[1;33m                             for k in range(K)])\n\u001b[0m\u001b[0;32m    109\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    110\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"__main__\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mE:\\Python\\POSLDA-Storytelling-Twitter\\lda\\ldamodel.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m    106\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    107\u001b[0m         return self.sample_from([self.topic_weight(d, word, k)\n\u001b[1;32m--> 108\u001b[1;33m                             for k in range(K)])\n\u001b[0m\u001b[0;32m    109\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    110\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"__main__\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mE:\\Python\\POSLDA-Storytelling-Twitter\\lda\\ldamodel.py\u001b[0m in \u001b[0;36mtopic_weight\u001b[1;34m(self, d, word, k)\u001b[0m\n\u001b[0;32m     91\u001b[0m         return the weight for the k-th topic\"\"\"\n\u001b[0;32m     92\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 93\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mp_word_given_topic\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mword\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbeta\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mp_topic_given_document\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0md\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0malpha\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     94\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     95\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0msample_from\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweights\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mE:\\Python\\POSLDA-Storytelling-Twitter\\lda\\ldamodel.py\u001b[0m in \u001b[0;36mp_word_given_topic\u001b[1;34m(self, word, topic, beta)\u001b[0m\n\u001b[0;32m     85\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     86\u001b[0m         return ((self.topic_word_counts[topic][word] + beta) /\n\u001b[1;32m---> 87\u001b[1;33m                 (self.topic_counts[topic] + W * beta))\n\u001b[0m\u001b[0;32m     88\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     89\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mtopic_weight\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0md\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mword\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'W' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lda = LdaModel(documents2, 5, 0.1, 0.1)"
+    "lda = LdaModel(documents2, 4, 0.1, 0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 Java 3\n",
+      "0 Big Data 3\n",
+      "0 Hadoop 2\n",
+      "0 HBase 1\n",
+      "0 C++ 1\n",
+      "0 Spark 1\n",
+      "0 Storm 1\n",
+      "0 programming languages 1\n",
+      "0 MapReduce 1\n",
+      "0 Cassandra 1\n",
+      "0 deep learning 1\n",
+      "1 HBase 2\n",
+      "1 neural networks 2\n",
+      "1 Postgres 2\n",
+      "1 MongoDB 2\n",
+      "1 machine learning 2\n",
+      "1 Cassandra 1\n",
+      "1 numpy 1\n",
+      "1 decision trees 1\n",
+      "1 deep learning 1\n",
+      "1 databases 1\n",
+      "1 MySQL 1\n",
+      "1 NoSQL 1\n",
+      "1 artificial intelligence 1\n",
+      "1 scipy 1\n",
+      "2 regression 3\n",
+      "2 Python 2\n",
+      "2 R 2\n",
+      "2 libsvm 2\n",
+      "2 scikit-learn 2\n",
+      "2 mathematics 1\n",
+      "2 support vector machines 1\n",
+      "2 Haskell 1\n",
+      "2 Mahout 1\n",
+      "3 statistics 3\n",
+      "3 probability 3\n",
+      "3 Python 2\n",
+      "3 R 2\n",
+      "3 pandas 2\n",
+      "3 statsmodels 2\n",
+      "3 C++ 1\n",
+      "3 artificial intelligence 1\n",
+      "3 theory 1\n"
+     ]
+    }
+   ],
    "source": [
     "lda.print_topics()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hadoop', 'Big Data', 'HBase', 'Java', 'Spark', 'Storm', 'Cassandra']\n",
+      "Topik a:  7\n",
+      "['NoSQL', 'MongoDB', 'Cassandra', 'HBase', 'Postgres']\n",
+      "Topik b:  5\n",
+      "['Python', 'scikit-learn', 'scipy', 'numpy', 'statsmodels', 'pandas']\n",
+      "Topik b:  2\n",
+      "Topik c:  2\n",
+      "Topik d:  2\n",
+      "['R', 'Python', 'statistics', 'regression', 'probability']\n",
+      "Topik d:  3\n",
+      "Topik c:  2\n",
+      "['machine learning', 'regression', 'decision trees', 'libsvm']\n",
+      "Topik c:  2\n",
+      "Topik b:  2\n",
+      "['Python', 'R', 'Java', 'C++', 'Haskell', 'programming languages']\n",
+      "Topik c:  3\n",
+      "Topik a:  3\n",
+      "['statistics', 'probability', 'mathematics', 'theory']\n",
+      "Topik d:  3\n",
+      "Topik c:  1\n",
+      "['machine learning', 'scikit-learn', 'Mahout', 'neural networks']\n",
+      "Topik c:  2\n",
+      "Topik b:  2\n",
+      "['neural networks', 'deep learning', 'Big Data', 'artificial intelligence']\n",
+      "Topik b:  3\n",
+      "Topik a:  1\n",
+      "['Hadoop', 'Java', 'MapReduce', 'Big Data']\n",
+      "Topik a:  4\n",
+      "['statistics', 'R', 'statsmodels']\n",
+      "Topik d:  3\n",
+      "['C++', 'deep learning', 'artificial intelligence', 'probability']\n",
+      "Topik d:  3\n",
+      "Topik a:  1\n",
+      "['pandas', 'R', 'Python']\n",
+      "Topik d:  3\n",
+      "['databases', 'HBase', 'Postgres', 'MySQL', 'MongoDB']\n",
+      "Topik b:  5\n",
+      "['libsvm', 'regression', 'support vector machines']\n",
+      "Topik c:  3\n"
+     ]
+    }
+   ],
+   "source": [
+    "lda.print_topics2()"
    ]
   },
   {
